--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -2,15 +2,11 @@
   = javascript_include_tag '//cdn.auth0.com/js/lock-7.0.min.js'
 
 .home
-  .container
-    .login-page.clearfix
+  .row
+    .large-12.columns
       .login-box.auth0-box.before
-        img[src="https://i.cloudup.com/StzWWrY34s.png"]
-        h3
-          | Auth0 Example
-
         p
           | Zero friction identity infrastructure, built for developers
 
-        a.btn.btn-primary.btn-lg.btn-login.btn-block[onclick="signin()"]
+        a.button.btn-login.btn-block[onclick="signin()"]
           | SignIn
