--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -1,10 +1,10 @@
-var lock = new Auth0Lock(
+var auth0Lock = new Auth0Lock(
   '<%= Rails.application.secrets.auth0_client_id %>',
   '<%= Rails.application.secrets.auth0_domain %>'
 );
 
 function signin() {
-  lock.show({
+  auth0Lock.show({
     callbackURL: '<%= Rails.application.secrets.auth0_callback_base %>/auth/auth0/callback',
     responseType: 'code',
     authParams: {
