--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -1,9 +1,30 @@
-.container
-  .row
-    .col-sm-12
-      .login-box.auth0-box.before
-        p
-          | Zero friction identity infrastructure, built for developers
-
-        a.button.btn-login.btn-block[onclick="signin()"]
-          | SignIn
+#results.ui.two.column.stackable.grid
+  .column
+    ol.ui.large.divided.list
+      li.item
+        .image
+          span.grade.grade-a A
+        .content
+          .header Brooklyn Daycare
+          .meta
+            span blah blah
+          .description
+          .extra
+            strong 12 violations
+            | Permit, Safety plan, Immunizations, CPR,
+            |  Outdoor space,
+            strong +6 more
+      li.item
+        .image
+          span.grade.grade-b  B
+        .content
+          .header Brooklyn Daycare
+          .meta
+            span blah blah
+          .description
+          .extra
+            strong 12 violations
+            | Permit, Safety plan, Immunizations, CPR,
+            |  Outdoor space,
+            strong +6 more
+  #map.column(style="background-image:url(//maps.googleapis.com/maps/api/staticmap?center=11211&zoom=11&scale=false&size=640x640&maptype=roadmap&format=png&visual_refresh=true)")
