adding basic map (mapbox/leaflet), using mapbox-gl

--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -27,4 +27,4 @@
             | Permit, Safety plan, Immunizations, CPR,
             |  Outdoor space,
             strong +6 more
-  #map.column(style="background-image:url(//maps.googleapis.com/maps/api/staticmap?center=11211&zoom=11&scale=false&size=640x640&maptype=roadmap&format=png&visual_refresh=true)")
+  #map.column
