backend to frontend - data flow, showing 10 daycares with random grades

--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -12,3 +12,12 @@
 //     }
 //   });
 // }
+$(function(){
+  $("div.violations").shorten({
+    showChars: 250,
+    ellipsesText: '',
+    moreText: 'MORE',
+    lessText: 'LESS'
+  });
+});
+
