--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -30,6 +30,7 @@
   color: white;
   font-weight: 400;
   font-size: 18px;
+  text-transform: uppercase;
 
   &-a {
     background-color: @blue;
@@ -37,6 +38,18 @@
 
   &-b {
     background-color: @green;
+  }
+
+  &-c {
+    background-color: @yellow;
+  }
+
+  &-d {
+    background-color: @orange;
+  }
+
+  &-e {
+    background-color: @red;
   }
 }
 
