--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -66,6 +66,7 @@
 
   .header.item {
     margin: 0;
+    min-width: 192px;
   }
 
   .field {
@@ -86,6 +87,10 @@
     font-weight: 300;
     font-size: 11px;
     letter-spacing: 1px;
+  }
+
+  input[name="search"] {
+    min-width: 200px;
   }
 }
 
