adding simplified_health_codes.csv which is a csv exported out of https://docs.google.com/spreadsheets/d/1CH9OGacfXyHxHOk8YrrJfwE77rUz-UwyUG_PGUzbV9U/edit#gid=0 adding short_definition and simple_summary to Infractions and then displaying them when available

--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -24,6 +24,9 @@
               - if num_violations > 0
                 div.violations
                   - daycare.inspection.infractions.each do |infraction|
-                    div= infraction.violation_summary
+                    - if infraction.simple_summary
+                      div= infraction.simple_summary
+                    - else
+                      div= infraction.violation_summary
   .column
     #map
