mapboc-gl doesnt support icon-color for maki icons yet, so for now using different icons for different grades (solid black marker for grades A & B, and an empty marker for C & D). Updating the marker popup with the correct grade

--- a/app/views/home/show.html.slim
+++ b/app/views/home/show.html.slim
@@ -3,7 +3,7 @@
   .column
     ol.ui.large.divided.list
       - @daycares.each do |daycare|
-        li.item.daycare data-lat=daycare.lat data-lon=daycare.lon data-center_name=daycare.center_name
+        li.item.daycare data-lat=daycare.lat data-lon=daycare.lon data-center_name=daycare.center_name data-grade=daycare.grade
           .image
             span.grade class="grade-#{daycare.grade}"= daycare.grade
           .content
