--- a/app/assets/javascripts/home.js.erb
+++ b/app/assets/javascripts/home.js.erb
@@ -34,10 +34,35 @@ var setup_map = function() {
     "features": []
   };
 
+  // mapbox-gl does not support icon-color for maki icons yet
+  // so, for now lets use different icons for different grades
+  var get_marker_for_grade = function(grade) {
+    var marker = 'building-24';
+    switch(grade) {
+      case 'a':
+        marker = 'marker-24';
+        break;
+      case 'b':
+        marker = 'marker-24';
+        break;
+      case 'c':
+        marker = 'marker-stroked-24';
+        break;
+      case 'd':
+        marker = 'marker-stroked-24';
+        break;
+      default:
+        marker = 'building-24';
+        break;
+    }
+    return marker
+  };
+
   $.each(points, function(index, point) {
     var lat = $(point).data('lat');
     var lon = $(point).data('lon');
     var center_name = $(point).data('center_name');
+    var grade = $(point).data('grade');
     if (!lat || !lon) {
       return true;
     }
@@ -50,8 +75,8 @@ var setup_map = function() {
       },
       "properties": {
         "title": center_name,
-        "description": "<div class=\"marker-title\">"+ center_name +"</div>",
-        "marker-symbol": "marker-24"
+        "description": "<div class=\"marker-title\">"+ center_name +"</div><div class=\"image\"><span class=\"grade grade-"+grade+"\">"+grade+"</span></div>",
+        "marker-symbol": get_marker_for_grade(grade)
       }
     });
   });
@@ -68,10 +93,6 @@ var setup_map = function() {
       "interactive": true,
       "layout": {
         "icon-image": "{marker-symbol}"
-      },
-      "paint": {
-        "text-size": 14,
-        "icon-color" : "#ff0000"
       }
     });  
   });
