--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,7 @@ html lang="en"
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:400,300,700', media: 'all'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
+    = javascript_include_tag 'application'
   body
     #sidebar
       .ui.vertical.sidebar.menu
@@ -20,12 +21,13 @@ html lang="en"
         form.ui.form
           .ui.stackable.menu
             .header.item
-              .logo KARL<span>AND</span>KEKE
+              .logo 
+                a href="/" KARL<span>AND</span>KEKE
             .item.search
               .field
                 label(for="search")
                   | Search by daycare or Location
-                .ui.fluid.left.icon.input.loading
+                .ui.fluid.left.icon.input
                   input(type="search" id="search" name="search" placeholder="Search")
                   i.search.icon
             .item.filter
@@ -82,4 +84,3 @@ html lang="en"
         = yield
 
     /= javascript_include_tag '//cdn.auth0.com/js/lock-7.0.min.js'
-    = javascript_include_tag 'application'
