--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,82 +5,78 @@ html lang="en"
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
     meta http-equiv="x-ua-compatible" content="ie=edge"
 
-    title Karlandkeke
+    title Karl and Keke - Daycare ratings
 
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Roboto:400,300,700', media: 'all'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
     = javascript_include_tag 'application'
+
   body
-    #sidebar
-      .ui.vertical.sidebar.menu
-        .header.item
-          .logo KARL<span>AND</span>KEKE
-    .pusher
-      #masthead
-        form.ui.form
-          .ui.stackable.menu
-            .header.item
-              .logo 
-                a href="/" KARL<span>AND</span>KEKE
-            .item.search
-              .field
-                label(for="search")
-                  | Search by daycare or Location
-                .ui.fluid.left.icon.input
-                  input(type="search" id="search" name="search" placeholder="Search")
-                  i.search.icon
-            .item.filter
-              .field
-                label
-                  | Filter
-                .ui.fluid.floating.selection.labeled.icon.dropdown(id="filter")
-                  input(type="hidden" name="filter")
-                  / i.filter.icon
-                  .text
+    #masthead
+      form.ui.form
+        .ui.stackable.menu
+          .header.item
+            .logo
+              a href="/" KARL<span>AND</span>KEKE
+          .item.search
+            .field
+              label(for="search")
+                | Search by daycare or Location
+              .ui.fluid.left.icon.input
+                input(type="search" id="search" name="search" placeholder="Search")
+                i.search.icon
+          .item.filter
+            .field
+              label
+                | Filter
+              .ui.fluid.floating.selection.labeled.icon.dropdown(id="filter")
+                input(type="hidden" name="filter")
+                / i.filter.icon
+                .text
+                  .ui.empty.circular.label
+                  | All Grades
+                .menu
+                  .item(data-value="All")
                     .ui.empty.circular.label
                     | All Grades
-                  .menu
-                    .item(data-value="All")
-                      .ui.empty.circular.label
-                      | All Grades
-                    .item(data-value="A")
-                      .ui.blue.empty.circular.label
-                      | A
-                    .item(data-value="B")
-                      .ui.green.empty.circular.label
-                      | B
-                    .item(data-value="C")
-                      .ui.orange.empty.circular.label
-                      | C
-                    .item(data-value="D")
-                      .ui.red.empty.circular.label
-                      | D
-          .ui.stackable.secondary.menu
-            .header.item
-            .item.violations
-              .field
-                label
-                  | Violations
-                .ui.floating.selection.labeled.icon.dropdown(name="violations")
-                  input(type="hidden" name="violations")
-                  .text
-                    i.warning.sign.icon
-                    | Add Violations
-                  i.dropdown.icon
-                  .menu
-                    .item(data-value="violation 1") Violation 1
-                    .item(data-value="violation 2") Violation 2
-            .item
-              .labels
-                .ui.label
-                  | Permit
-                  i.delete.icon
-                .ui.label
-                  | Immunization
-                  i.delete.icon
+                  .item(data-value="A")
+                    .ui.blue.empty.circular.label
+                    | A
+                  .item(data-value="B")
+                    .ui.green.empty.circular.label
+                    | B
+                  .item(data-value="C")
+                    .ui.orange.empty.circular.label
+                    | C
+                  .item(data-value="D")
+                    .ui.red.empty.circular.label
+                    | D
+        .ui.stackable.secondary.menu
+          .header.item
+          .item.violations
+            .field
+              label
+                | Violations
+              .ui.floating.selection.labeled.icon.dropdown(name="violations")
+                input(type="hidden" name="violations")
+                .text
+                  i.warning.sign.icon
+                  | Add Violations
+                i.dropdown.icon
+                .menu
+                  .item(data-value="violation 1") Violation 1
+                  .item(data-value="violation 2") Violation 2
+          .item
+            .labels
+              .ui.label
+                | Permit
+                i.delete.icon
+              .ui.label
+                | Immunization
+                i.delete.icon
 
-      #content
-        = yield
+    #content
+      = yield
 
     /= javascript_include_tag '//cdn.auth0.com/js/lock-7.0.min.js'
