grade filter (backend and a naive frontend)

--- a/app/views/daycare/_daycare.html.slim
+++ b/app/views/daycare/_daycare.html.slim
@@ -10,7 +10,7 @@
   .image
     .grade class="grade-#{daycare.grade}"= daycare.grade
   .content
-    .header=link_to(daycare.center_name, "daycare/#{daycare.permalink}")
+    .header=link_to(daycare.center_name, "/daycare/#{daycare.permalink}")
     .street_address
       small= daycare.address
     .city_state_info
