--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -47,11 +47,14 @@ html lang="en"
                     .ui.green.empty.circular.label
                     | B
                   .item(data-value="C")
-                    .ui.orange.empty.circular.label
+                    .ui.yellow.empty.circular.label
                     | C
                   .item(data-value="D")
-                    .ui.red.empty.circular.label
+                    .ui.orange.empty.circular.label
                     | D
+                  .item(data-value="E")
+                    .ui.red.empty.circular.label
+                    | E
         .ui.stackable.secondary.menu
           .header.item
           .item.violations
