--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -140,6 +140,13 @@
   }
 }
 
+span.show_map {
+  cursor: pointer;
+  @media only screen and (max-width: @largestMobileScreen) {
+    display:none;
+  }
+}
+
 .map-wrapper {
   display: none;
 
